// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Property and Function Privilege > Generates correct output for class property and function privilege array modes > # Of Files Generated 1`] = `4`;

exports[`Property and Function Privilege > Generates correct output for class property and function privilege array modes > msdocs/scriptapi/TOC.yml 1`] = `
"  - name: example_module
    items:
    - name: example_module
      href: example_module/example_module.md
    - name: ExampleClass
      href: example_module/ExampleClass.md
"
`;

exports[`Property and Function Privilege > Generates correct output for class property and function privilege array modes > msdocs/scriptapi/example_module/ExampleClass.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: example_module.ExampleClass Class
description: Contents of the example_module.ExampleClass class.
---
# ExampleClass Class

## Properties

### **no_privilege_property**
\`no_privilege_property: number;\`

Type: *number*

Notes:
  - This property can't be used in restricted-execution mode.

### **none_privileged_property**
\`none_privileged_property: number;\`

Type: *number*

Notes:
  - This property can't be edited in restricted-execution mode.

### **none_privileged_property_with_docs**
\`none_privileged_property_with_docs: number;\`

Test description

Type: *number*

Notes:
  - This property can't be edited in restricted-execution mode.

### **privileged_property**
\`privileged_property: number;\`

Type: *number*

### **read_only_property**
\`read-only read_only_property: number;\`

Type: *number*

## Methods
- [early_privileged_function](#early_privileged_function)
- [multi_privileged_function](#multi_privileged_function)
- [non_privileged_function](#non_privileged_function)
- [non_privileged_function_with_comments](#non_privileged_function_with_comments)
- [privileged_function](#privileged_function)

### **early_privileged_function**
\`
early_privileged_function(): boolean
\`

**Returns** *boolean*
  
Notes:
- This function can't be called in restricted-execution mode.
- This function can be called in early-execution mode.

### **multi_privileged_function**
\`
multi_privileged_function(): boolean
\`

**Returns** *boolean*
  
Notes:
- This function can be called in early-execution mode.

### **non_privileged_function**
\`
non_privileged_function(): boolean
\`

**Returns** *boolean*
  
Notes:
- This function can't be called in restricted-execution mode.

### **non_privileged_function_with_comments**
\`
non_privileged_function_with_comments(): boolean
\`

Test description

**Returns** *boolean*
  
Notes:
- This function can't be called in restricted-execution mode.

### **privileged_function**
\`
privileged_function(): boolean
\`

**Returns** *boolean*
"
`;

exports[`Property and Function Privilege > Generates correct output for class property and function privilege array modes > msdocs/scriptapi/example_module/example_module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: example_module Module
description: Contents of the example_module module
---
# \`example_module\` Module

## Manifest Details
\`\`\`json
{
    "module_name": "example_module",
    "version": "1.0.0"
}
\`\`\`
This is version 1.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`1.0.0\`

## Classes
- [ExampleClass](ExampleClass.md)

## Functions

### **early_privileged_function**
\`
early_privileged_function(): boolean
\`

**Returns** *boolean*
  
Notes:
- This function can't be called in restricted-execution mode.
- This function can be called in early-execution mode.

### **multi_privileged_function**
\`
multi_privileged_function(): boolean
\`

**Returns** *boolean*
  
Notes:
- This function can be called in early-execution mode.

### **non_privileged_function**
\`
non_privileged_function(): boolean
\`

**Returns** *boolean*
  
Notes:
- This function can't be called in restricted-execution mode.

### **non_privileged_function_with_comments**
\`
non_privileged_function_with_comments(): boolean
\`

Test description

**Returns** *boolean*
  
Notes:
- This function can't be called in restricted-execution mode.

### **privileged_function**
\`
privileged_function(): boolean
\`

**Returns** *boolean*
"
`;

exports[`Property and Function Privilege > Generates correct output for class property and function privilege array modes > typescript/example_module@1.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "example_module",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
export class ExampleClass {
    private constructor();
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     */
    no_privilege_property: number;
    /**
     * @remarks
     * This property can't be edited in restricted-execution mode.
     *
     */
    none_privileged_property: number;
    /**
     * @remarks
     * Test description
     *
     * This property can't be edited in restricted-execution mode.
     *
     */
    none_privileged_property_with_docs: number;
    privileged_property: number;
    readonly read_only_property: number;
    /**
     * @remarks
     * This function can't be called in restricted-execution mode.
     *
     * This function can be called in early-execution mode.
     *
     */
    early_privileged_function(): boolean;
    /**
     * @remarks
     * This function can be called in early-execution mode.
     *
     */
    multi_privileged_function(): boolean;
    /**
     * @remarks
     * This function can't be called in restricted-execution mode.
     *
     */
    non_privileged_function(): boolean;
    /**
     * @remarks
     * Test description
     *
     * This function can't be called in restricted-execution mode.
     *
     */
    non_privileged_function_with_comments(): boolean;
    privileged_function(): boolean;
}

/**
 * @remarks
 * This function can't be called in restricted-execution mode.
 *
 * This function can be called in early-execution mode.
 *
 */
export function early_privileged_function(): boolean;
/**
 * @remarks
 * This function can be called in early-execution mode.
 *
 */
export function multi_privileged_function(): boolean;
/**
 * @remarks
 * This function can't be called in restricted-execution mode.
 *
 */
export function non_privileged_function(): boolean;
/**
 * @remarks
 * Test description
 *
 * This function can't be called in restricted-execution mode.
 *
 */
export function non_privileged_function_with_comments(): boolean;
export function privileged_function(): boolean;
"
`;

exports[`Property and Function Privilege > Generates correct output for class property and function privilege changelogs > # Of Files Generated 1`] = `2`;

exports[`Property and Function Privilege > Generates correct output for class property and function privilege changelogs > changelog/test-module1.json 1`] = `
"[
  {
    "version": "2.0.0",
    "dependencies": [],
    "peer_dependencies": [],
    "classes": [
      {
        "name": "ClassWithNoPrivileges",
        "type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "ClassWithNoPrivileges"
        },
        "functions": [
          {
            "name": "class_func",
            "is_constructor": false,
            "return_type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_func"
            },
            "arguments": [],
            "call_privilege": []
          }
        ],
        "properties": [
          {
            "name": "class_prop",
            "is_read_only": false,
            "type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_prop"
            },
            "get_privilege": [],
            "set_privilege": []
          }
        ],
        "constants": [],
        "base_types": []
      },
      {
        "name": "ClassAddsFirstPrivilege",
        "type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "ClassAddsFirstPrivilege"
        },
        "functions": [
          {
            "name": "class_func",
            "is_constructor": false,
            "return_type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_func"
            },
            "arguments": [],
            "call_privilege": [
              {
                "name": "restricted_execution",
                "$added": true
              }
            ]
          }
        ],
        "properties": [
          {
            "name": "class_prop",
            "is_read_only": false,
            "type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_prop"
            },
            "set_privilege": [
              {
                "name": "restricted_execution",
                "$added": true
              }
            ],
            "get_privilege": [
              {
                "name": "restricted_execution",
                "$added": true
              }
            ]
          }
        ],
        "constants": [],
        "base_types": []
      },
      {
        "name": "ClassWithReadOnlyNoChange",
        "type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "ClassWithReadOnlyNoChange"
        },
        "functions": [
          {
            "name": "class_func",
            "is_constructor": false,
            "return_type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_func"
            },
            "arguments": [],
            "call_privilege": []
          }
        ],
        "properties": [
          {
            "name": "class_prop",
            "is_read_only": false,
            "type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_prop"
            },
            "get_privilege": [],
            "set_privilege": []
          }
        ],
        "constants": [],
        "base_types": []
      },
      {
        "name": "ClassWithReadOnlyAddSecond",
        "type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "ClassWithReadOnlyAddSecond"
        },
        "functions": [
          {
            "name": "class_func",
            "is_constructor": false,
            "return_type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_func"
            },
            "arguments": [],
            "call_privilege": [
              {
                "name": "early_execution",
                "$added": true
              }
            ]
          }
        ],
        "properties": [
          {
            "name": "class_prop",
            "is_read_only": false,
            "type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_prop"
            },
            "get_privilege": [
              {
                "name": "early_execution",
                "$added": true
              }
            ],
            "set_privilege": [
              {
                "name": "early_execution",
                "$added": true
              }
            ]
          }
        ],
        "constants": [],
        "base_types": []
      },
      {
        "name": "ClassWithTwoPrivilegesNoChange",
        "type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "ClassWithTwoPrivilegesNoChange"
        },
        "functions": [
          {
            "name": "class_func",
            "is_constructor": false,
            "return_type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_func"
            },
            "arguments": [],
            "call_privilege": []
          }
        ],
        "properties": [
          {
            "name": "class_prop",
            "is_read_only": false,
            "type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_prop"
            },
            "set_privilege": [],
            "get_privilege": []
          }
        ],
        "constants": [],
        "base_types": []
      },
      {
        "name": "ClassWithTwoPrivilegesRemoveOne",
        "type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "ClassWithTwoPrivilegesRemoveOne"
        },
        "functions": [
          {
            "name": "class_func",
            "is_constructor": false,
            "return_type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_func"
            },
            "arguments": [],
            "call_privilege": [
              {
                "name": "restricted_execution",
                "$removed": true
              }
            ]
          }
        ],
        "properties": [
          {
            "name": "class_prop",
            "is_read_only": false,
            "type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_prop"
            },
            "get_privilege": [
              {
                "name": "restricted_execution",
                "$removed": true
              }
            ],
            "set_privilege": [
              {
                "name": "restricted_execution",
                "$removed": true
              }
            ]
          }
        ],
        "constants": [],
        "base_types": []
      },
      {
        "name": "ClassWithOnePrivilegeRemoved",
        "type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "ClassWithOnePrivilegeRemoved"
        },
        "functions": [
          {
            "name": "class_func",
            "is_constructor": false,
            "return_type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_func"
            },
            "arguments": [],
            "call_privilege": [
              {
                "name": "restricted_execution",
                "$removed": true
              }
            ]
          }
        ],
        "properties": [
          {
            "name": "class_prop",
            "is_read_only": false,
            "type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_prop"
            },
            "set_privilege": [
              {
                "name": "restricted_execution",
                "$removed": true
              }
            ],
            "get_privilege": [
              {
                "name": "restricted_execution",
                "$removed": true
              }
            ]
          }
        ],
        "constants": [],
        "base_types": []
      },
      {
        "name": "ClassPropGetAdded",
        "type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "ClassPropGetAdded"
        },
        "properties": [
          {
            "name": "class_prop",
            "is_read_only": false,
            "type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_prop"
            },
            "set_privilege": [],
            "get_privilege": [
              {
                "name": "early_execution",
                "$added": true
              }
            ]
          }
        ],
        "functions": [],
        "constants": [],
        "base_types": []
      },
      {
        "name": "ClassPropSetAdded",
        "type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "ClassPropSetAdded"
        },
        "properties": [
          {
            "name": "class_prop",
            "is_read_only": false,
            "type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_prop"
            },
            "get_privilege": [],
            "set_privilege": [
              {
                "name": "early_execution",
                "$added": true
              }
            ]
          }
        ],
        "functions": [],
        "constants": [],
        "base_types": []
      }
    ],
    "interfaces": [],
    "errors": [],
    "objects": [],
    "functions": [
      {
        "name": "FuncWithNoPrivileges",
        "is_constructor": false,
        "return_type": {
          "is_errorable": false,
          "is_bind_type": true,
          "name": "FuncWithNoPrivileges"
        },
        "arguments": [],
        "call_privilege": []
      },
      {
        "name": "FuncAddsFirstPrivilege",
        "is_constructor": false,
        "return_type": {
          "is_errorable": false,
          "is_bind_type": true,
          "name": "FuncAddsFirstPrivilege"
        },
        "arguments": [],
        "call_privilege": [
          {
            "name": "restricted_execution",
            "$added": true
          }
        ]
      },
      {
        "name": "FuncWithReadOnlyNoChange",
        "is_constructor": false,
        "return_type": {
          "is_errorable": false,
          "is_bind_type": true,
          "name": "FuncWithReadOnlyNoChange"
        },
        "arguments": [],
        "call_privilege": []
      },
      {
        "name": "FuncWithReadOnlyAddSecond",
        "is_constructor": false,
        "return_type": {
          "is_errorable": false,
          "is_bind_type": true,
          "name": "FuncWithReadOnlyAddSecond"
        },
        "arguments": [],
        "call_privilege": [
          {
            "name": "early_execution",
            "$added": true
          }
        ]
      },
      {
        "name": "FuncWithTwoPrivilegesNoChange",
        "is_constructor": false,
        "return_type": {
          "is_errorable": false,
          "is_bind_type": true,
          "name": "FuncWithTwoPrivilegesNoChange"
        },
        "arguments": [],
        "call_privilege": []
      },
      {
        "name": "FuncWithTwoPrivilegesRemoveOne",
        "is_constructor": false,
        "return_type": {
          "is_errorable": false,
          "is_bind_type": true,
          "name": "FuncWithTwoPrivilegesRemoveOne"
        },
        "arguments": [],
        "call_privilege": [
          {
            "name": "restricted_execution",
            "$removed": true
          }
        ]
      },
      {
        "name": "FuncWithOnePrivilegeRemoved",
        "is_constructor": false,
        "return_type": {
          "is_errorable": false,
          "is_bind_type": true,
          "name": "FuncWithOnePrivilegeRemoved"
        },
        "arguments": [],
        "call_privilege": [
          {
            "name": "restricted_execution",
            "$removed": true
          }
        ]
      }
    ],
    "constants": [],
    "enums": [],
    "type_aliases": []
  },
  {
    "version": "1.0.0",
    "$added": true,
    "minecraft_version": "1.0.0",
    "name": "test-module1",
    "uuid": "fe0020ab-2aac-482c-8edc-c18622f022ef",
    "module_type": "script",
    "classes": [
      {
        "name": "ClassWithNoPrivileges",
        "type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "ClassWithNoPrivileges"
        },
        "functions": [
          {
            "name": "class_func",
            "is_constructor": false,
            "return_type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_func"
            },
            "arguments": []
          }
        ],
        "properties": [
          {
            "name": "class_prop",
            "is_read_only": false,
            "type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_prop"
            }
          }
        ]
      },
      {
        "name": "ClassAddsFirstPrivilege",
        "type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "ClassAddsFirstPrivilege"
        },
        "functions": [
          {
            "name": "class_func",
            "is_constructor": false,
            "return_type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_func"
            },
            "arguments": []
          }
        ],
        "properties": [
          {
            "name": "class_prop",
            "is_read_only": false,
            "type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_prop"
            }
          }
        ]
      },
      {
        "name": "ClassWithReadOnlyNoChange",
        "type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "ClassWithReadOnlyNoChange"
        },
        "functions": [
          {
            "name": "class_func",
            "is_constructor": false,
            "return_type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_func"
            },
            "arguments": [],
            "call_privilege": [
              {
                "name": "restricted_execution"
              }
            ]
          }
        ],
        "properties": [
          {
            "name": "class_prop",
            "is_read_only": false,
            "type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_prop"
            },
            "get_privilege": [
              {
                "name": "restricted_execution"
              }
            ],
            "set_privilege": [
              {
                "name": "restricted_execution"
              }
            ]
          }
        ]
      },
      {
        "name": "ClassWithReadOnlyAddSecond",
        "type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "ClassWithReadOnlyAddSecond"
        },
        "functions": [
          {
            "name": "class_func",
            "is_constructor": false,
            "return_type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_func"
            },
            "arguments": [],
            "call_privilege": [
              {
                "name": "restricted_execution"
              }
            ]
          }
        ],
        "properties": [
          {
            "name": "class_prop",
            "is_read_only": false,
            "type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_prop"
            },
            "get_privilege": [
              {
                "name": "restricted_execution"
              }
            ],
            "set_privilege": [
              {
                "name": "restricted_execution"
              }
            ]
          }
        ]
      },
      {
        "name": "ClassWithTwoPrivilegesNoChange",
        "type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "ClassWithTwoPrivilegesNoChange"
        },
        "functions": [
          {
            "name": "class_func",
            "is_constructor": false,
            "return_type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_func"
            },
            "arguments": [],
            "call_privilege": [
              {
                "name": "restricted_execution"
              },
              {
                "name": "early_execution"
              }
            ]
          }
        ],
        "properties": [
          {
            "name": "class_prop",
            "is_read_only": false,
            "type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_prop"
            },
            "set_privilege": [
              {
                "name": "restricted_execution"
              },
              {
                "name": "early_execution"
              }
            ],
            "get_privilege": [
              {
                "name": "restricted_execution"
              },
              {
                "name": "early_execution"
              }
            ]
          }
        ]
      },
      {
        "name": "ClassWithTwoPrivilegesRemoveOne",
        "type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "ClassWithTwoPrivilegesRemoveOne"
        },
        "functions": [
          {
            "name": "class_func",
            "is_constructor": false,
            "return_type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_func"
            },
            "arguments": [],
            "call_privilege": [
              {
                "name": "restricted_execution"
              },
              {
                "name": "early_execution"
              }
            ]
          }
        ],
        "properties": [
          {
            "name": "class_prop",
            "is_read_only": false,
            "type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_prop"
            },
            "get_privilege": [
              {
                "name": "restricted_execution"
              },
              {
                "name": "early_execution"
              }
            ],
            "set_privilege": [
              {
                "name": "restricted_execution"
              },
              {
                "name": "early_execution"
              }
            ]
          }
        ]
      },
      {
        "name": "ClassWithOnePrivilegeRemoved",
        "type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "ClassWithOnePrivilegeRemoved"
        },
        "functions": [
          {
            "name": "class_func",
            "is_constructor": false,
            "return_type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_func"
            },
            "arguments": [],
            "call_privilege": [
              {
                "name": "restricted_execution"
              }
            ]
          }
        ],
        "properties": [
          {
            "name": "class_prop",
            "is_read_only": false,
            "type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_prop"
            },
            "set_privilege": [
              {
                "name": "restricted_execution"
              }
            ],
            "get_privilege": [
              {
                "name": "restricted_execution"
              }
            ]
          }
        ]
      },
      {
        "name": "ClassPropGetAdded",
        "type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "ClassPropGetAdded"
        },
        "properties": [
          {
            "name": "class_prop",
            "is_read_only": false,
            "type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_prop"
            },
            "set_privilege": [
              {
                "name": "default"
              }
            ],
            "get_privilege": [
              {
                "name": "restricted_execution"
              }
            ]
          }
        ]
      },
      {
        "name": "ClassPropSetAdded",
        "type": {
          "is_bind_type": true,
          "is_errorable": false,
          "name": "ClassPropSetAdded"
        },
        "properties": [
          {
            "name": "class_prop",
            "is_read_only": false,
            "type": {
              "is_errorable": false,
              "is_bind_type": true,
              "name": "class_prop"
            },
            "get_privilege": [
              {
                "name": "default"
              }
            ],
            "set_privilege": [
              {
                "name": "restricted_execution"
              }
            ]
          }
        ]
      }
    ],
    "functions": [
      {
        "name": "FuncWithNoPrivileges",
        "is_constructor": false,
        "return_type": {
          "is_errorable": false,
          "is_bind_type": true,
          "name": "FuncWithNoPrivileges"
        },
        "arguments": []
      },
      {
        "name": "FuncAddsFirstPrivilege",
        "is_constructor": false,
        "return_type": {
          "is_errorable": false,
          "is_bind_type": true,
          "name": "FuncAddsFirstPrivilege"
        },
        "arguments": []
      },
      {
        "name": "FuncWithReadOnlyNoChange",
        "is_constructor": false,
        "return_type": {
          "is_errorable": false,
          "is_bind_type": true,
          "name": "FuncWithReadOnlyNoChange"
        },
        "arguments": [],
        "call_privilege": [
          {
            "name": "restricted_execution"
          }
        ]
      },
      {
        "name": "FuncWithReadOnlyAddSecond",
        "is_constructor": false,
        "return_type": {
          "is_errorable": false,
          "is_bind_type": true,
          "name": "FuncWithReadOnlyAddSecond"
        },
        "arguments": [],
        "call_privilege": [
          {
            "name": "restricted_execution"
          }
        ]
      },
      {
        "name": "FuncWithTwoPrivilegesNoChange",
        "is_constructor": false,
        "return_type": {
          "is_errorable": false,
          "is_bind_type": true,
          "name": "FuncWithTwoPrivilegesNoChange"
        },
        "arguments": [],
        "call_privilege": [
          {
            "name": "restricted_execution"
          },
          {
            "name": "early_execution"
          }
        ]
      },
      {
        "name": "FuncWithTwoPrivilegesRemoveOne",
        "is_constructor": false,
        "return_type": {
          "is_errorable": false,
          "is_bind_type": true,
          "name": "FuncWithTwoPrivilegesRemoveOne"
        },
        "arguments": [],
        "call_privilege": [
          {
            "name": "restricted_execution"
          },
          {
            "name": "early_execution"
          }
        ]
      },
      {
        "name": "FuncWithOnePrivilegeRemoved",
        "is_constructor": false,
        "return_type": {
          "is_errorable": false,
          "is_bind_type": true,
          "name": "FuncWithOnePrivilegeRemoved"
        },
        "arguments": [],
        "call_privilege": [
          {
            "name": "restricted_execution"
          }
        ]
      }
    ]
  }
]"
`;

exports[`Property and Function Privilege > Generates correct output for class property and function privilege changelogs > txt/test-module1.txt 1`] = `
"\`test-module1\`

== Change Log ==
=== 2.0.0 ===
- Changed class \`ClassAddsFirstPrivilege\`
    - Changed function \`class_func\`
- Changed class \`ClassPropGetAdded\`
- Changed class \`ClassPropSetAdded\`
- Changed class \`ClassWithOnePrivilegeRemoved\`
    - Changed function \`class_func\`
- Changed class \`ClassWithReadOnlyAddSecond\`
    - Changed function \`class_func\`
- Changed class \`ClassWithTwoPrivilegesRemoveOne\`
    - Changed function \`class_func\`
- Changed function \`FuncAddsFirstPrivilege\`
- Changed function \`FuncWithOnePrivilegeRemoved\`
- Changed function \`FuncWithReadOnlyAddSecond\`
- Changed function \`FuncWithTwoPrivilegesRemoveOne\`

=== 1.0.0 ===
- Added \`test-module1\` module

== /Change Log =="
`;

exports[`Property and Function Privilege > Generates correct output for class property and function privilege object modes > # Of Files Generated 1`] = `4`;

exports[`Property and Function Privilege > Generates correct output for class property and function privilege object modes > msdocs/scriptapi/TOC.yml 1`] = `
"  - name: example_module
    items:
    - name: example_module
      href: example_module/example_module.md
    - name: ExampleClass
      href: example_module/ExampleClass.md
"
`;

exports[`Property and Function Privilege > Generates correct output for class property and function privilege object modes > msdocs/scriptapi/example_module/ExampleClass.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: example_module.ExampleClass Class
description: Contents of the example_module.ExampleClass class.
---
# ExampleClass Class

## Properties

### **prop_both_privileges**
\`prop_both_privileges: number;\`

Type: *number*

Notes:
  - This property can be used in early-execution mode.

### **prop_earlyexe_privilege**
\`prop_earlyexe_privilege: number;\`

Type: *number*

Notes:
  - This property can't be used in restricted-execution mode.
  - This property can be used in early-execution mode.

### **prop_getearlyexe_privileges**
\`prop_getearlyexe_privileges: number;\`

Type: *number*

Notes:
  - This property can't be used in restricted-execution mode.
  - This property can be read in early-execution mode.

### **prop_getreadonly_privileges**
\`prop_getreadonly_privileges: number;\`

Type: *number*

Notes:
  - This property can't be edited in restricted-execution mode.

### **prop_none_privilege**
\`prop_none_privilege: number;\`

Type: *number*

Notes:
  - This property can't be used in restricted-execution mode.

### **prop_readonly_privilege**
\`prop_readonly_privilege: number;\`

Type: *number*

### **prop_setearlyexe_privileges**
\`prop_setearlyexe_privileges: number;\`

Type: *number*

Notes:
  - This property can't be used in restricted-execution mode.
  - This property can be edited in early-execution mode.

### **prop_setreadonly_privileges**
\`prop_setreadonly_privileges: number;\`

Type: *number*

Notes:
  - This property can't be read in restricted-execution mode.

## Methods
- [memberfn_both_privileges](#memberfn_both_privileges)
- [memberfn_earlyexe_privilege](#memberfn_earlyexe_privilege)
- [memberfn_none_privilege](#memberfn_none_privilege)
- [memberfn_readonly_privilege](#memberfn_readonly_privilege)

### **memberfn_both_privileges**
\`
memberfn_both_privileges(): boolean
\`

**Returns** *boolean*
  
Notes:
- This function can be called in early-execution mode.

### **memberfn_earlyexe_privilege**
\`
memberfn_earlyexe_privilege(): boolean
\`

**Returns** *boolean*
  
Notes:
- This function can't be called in restricted-execution mode.
- This function can be called in early-execution mode.

### **memberfn_none_privilege**
\`
memberfn_none_privilege(): boolean
\`

**Returns** *boolean*
  
Notes:
- This function can't be called in restricted-execution mode.

### **memberfn_readonly_privilege**
\`
memberfn_readonly_privilege(): boolean
\`

**Returns** *boolean*
"
`;

exports[`Property and Function Privilege > Generates correct output for class property and function privilege object modes > msdocs/scriptapi/example_module/example_module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: example_module Module
description: Contents of the example_module module
---
# \`example_module\` Module

## Manifest Details
\`\`\`json
{
    "module_name": "example_module",
    "version": "1.0.0"
}
\`\`\`
This is version 1.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`1.0.0\`

## Classes
- [ExampleClass](ExampleClass.md)

## Functions

### **fn_both_privileges**
\`
fn_both_privileges(): boolean
\`

**Returns** *boolean*
  
Notes:
- This function can be called in early-execution mode.

### **fn_earlyexe_privilege**
\`
fn_earlyexe_privilege(): boolean
\`

**Returns** *boolean*
  
Notes:
- This function can't be called in restricted-execution mode.
- This function can be called in early-execution mode.

### **fn_none_privilege**
\`
fn_none_privilege(): boolean
\`

**Returns** *boolean*
  
Notes:
- This function can't be called in restricted-execution mode.

### **fn_readonly_privilege**
\`
fn_readonly_privilege(): boolean
\`

**Returns** *boolean*
"
`;

exports[`Property and Function Privilege > Generates correct output for class property and function privilege object modes > typescript/example_module@1.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "example_module",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
export class ExampleClass {
    private constructor();
    /**
     * @remarks
     * This property can be used in early-execution mode.
     *
     */
    prop_both_privileges: number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     * This property can be used in early-execution mode.
     *
     */
    prop_earlyexe_privilege: number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     * This property can be read in early-execution mode.
     *
     */
    prop_getearlyexe_privileges: number;
    /**
     * @remarks
     * This property can't be edited in restricted-execution mode.
     *
     */
    prop_getreadonly_privileges: number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     */
    prop_none_privilege: number;
    prop_readonly_privilege: number;
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     * This property can be edited in early-execution mode.
     *
     */
    prop_setearlyexe_privileges: number;
    /**
     * @remarks
     * This property can't be read in restricted-execution mode.
     *
     */
    prop_setreadonly_privileges: number;
    /**
     * @remarks
     * This function can be called in early-execution mode.
     *
     */
    memberfn_both_privileges(): boolean;
    /**
     * @remarks
     * This function can't be called in restricted-execution mode.
     *
     * This function can be called in early-execution mode.
     *
     */
    memberfn_earlyexe_privilege(): boolean;
    /**
     * @remarks
     * This function can't be called in restricted-execution mode.
     *
     */
    memberfn_none_privilege(): boolean;
    memberfn_readonly_privilege(): boolean;
}

/**
 * @remarks
 * This function can be called in early-execution mode.
 *
 */
export function fn_both_privileges(): boolean;
/**
 * @remarks
 * This function can't be called in restricted-execution mode.
 *
 * This function can be called in early-execution mode.
 *
 */
export function fn_earlyexe_privilege(): boolean;
/**
 * @remarks
 * This function can't be called in restricted-execution mode.
 *
 */
export function fn_none_privilege(): boolean;
export function fn_readonly_privilege(): boolean;
"
`;

exports[`Property and Function Privilege > Generates correct output for class property and function privilege value mode > # Of Files Generated 1`] = `4`;

exports[`Property and Function Privilege > Generates correct output for class property and function privilege value mode > msdocs/scriptapi/TOC.yml 1`] = `
"  - name: example_module
    items:
    - name: example_module
      href: example_module/example_module.md
    - name: ExampleClass
      href: example_module/ExampleClass.md
"
`;

exports[`Property and Function Privilege > Generates correct output for class property and function privilege value mode > msdocs/scriptapi/example_module/ExampleClass.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: example_module.ExampleClass Class
description: Contents of the example_module.ExampleClass class.
---
# ExampleClass Class

## Properties

### **no_privilege_property**
\`no_privilege_property: number;\`

Type: *number*

Notes:
  - This property can't be used in restricted-execution mode.

### **none_privileged_property**
\`none_privileged_property: number;\`

Type: *number*

Notes:
  - This property can't be edited in restricted-execution mode.

### **none_privileged_property_with_docs**
\`none_privileged_property_with_docs: number;\`

Test description

Type: *number*

Notes:
  - This property can't be edited in restricted-execution mode.

### **privileged_property**
\`privileged_property: number;\`

Type: *number*

### **read_only_property**
\`read-only read_only_property: number;\`

Type: *number*

## Methods
- [non_privileged_function](#non_privileged_function)
- [non_privileged_function_with_comments](#non_privileged_function_with_comments)
- [privileged_function](#privileged_function)

### **non_privileged_function**
\`
non_privileged_function(): boolean
\`

**Returns** *boolean*
  
Notes:
- This function can't be called in restricted-execution mode.

### **non_privileged_function_with_comments**
\`
non_privileged_function_with_comments(): boolean
\`

Test description

**Returns** *boolean*
  
Notes:
- This function can't be called in restricted-execution mode.

### **privileged_function**
\`
privileged_function(): boolean
\`

**Returns** *boolean*
"
`;

exports[`Property and Function Privilege > Generates correct output for class property and function privilege value mode > msdocs/scriptapi/example_module/example_module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: example_module Module
description: Contents of the example_module module
---
# \`example_module\` Module

## Manifest Details
\`\`\`json
{
    "module_name": "example_module",
    "version": "1.0.0"
}
\`\`\`
This is version 1.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`1.0.0\`

## Classes
- [ExampleClass](ExampleClass.md)

## Functions

### **non_privileged_function**
\`
non_privileged_function(): boolean
\`

**Returns** *boolean*
  
Notes:
- This function can't be called in restricted-execution mode.

### **non_privileged_function_with_comments**
\`
non_privileged_function_with_comments(): boolean
\`

Test description

**Returns** *boolean*
  
Notes:
- This function can't be called in restricted-execution mode.

### **privileged_function**
\`
privileged_function(): boolean
\`

**Returns** *boolean*
"
`;

exports[`Property and Function Privilege > Generates correct output for class property and function privilege value mode > typescript/example_module@1.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "example_module",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
export class ExampleClass {
    private constructor();
    /**
     * @remarks
     * This property can't be used in restricted-execution mode.
     *
     */
    no_privilege_property: number;
    /**
     * @remarks
     * This property can't be edited in restricted-execution mode.
     *
     */
    none_privileged_property: number;
    /**
     * @remarks
     * Test description
     *
     * This property can't be edited in restricted-execution mode.
     *
     */
    none_privileged_property_with_docs: number;
    privileged_property: number;
    readonly read_only_property: number;
    /**
     * @remarks
     * This function can't be called in restricted-execution mode.
     *
     */
    non_privileged_function(): boolean;
    /**
     * @remarks
     * Test description
     *
     * This function can't be called in restricted-execution mode.
     *
     */
    non_privileged_function_with_comments(): boolean;
    privileged_function(): boolean;
}

/**
 * @remarks
 * This function can't be called in restricted-execution mode.
 *
 */
export function non_privileged_function(): boolean;
/**
 * @remarks
 * Test description
 *
 * This function can't be called in restricted-execution mode.
 *
 */
export function non_privileged_function_with_comments(): boolean;
export function privileged_function(): boolean;
"
`;

exports[`Property and Function Privilege > Generates correct output for read-only to restricted-execution privilege name change > # Of Files Generated 1`] = `4`;

exports[`Property and Function Privilege > Generates correct output for read-only to restricted-execution privilege name change > msdocs/scriptapi/TOC.yml 1`] = `
"  - name: example_module
    items:
    - name: example_module
      href: example_module/example_module.md
    - name: ExampleClass
      href: example_module/ExampleClass.md
"
`;

exports[`Property and Function Privilege > Generates correct output for read-only to restricted-execution privilege name change > msdocs/scriptapi/example_module/ExampleClass.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: example_module.ExampleClass Class
description: Contents of the example_module.ExampleClass class.
---
# ExampleClass Class

## Properties

### **both_none_name_prop**
\`both_none_name_prop: number;\`

Type: *number*

Notes:
  - This property can't be edited in restricted-execution mode.

### **both_read_only_name_prop**
\`both_read_only_name_prop: number;\`

Type: *number*

### **new_default_name_prop**
\`new_default_name_prop: number;\`

Type: *number*

Notes:
  - This property can't be edited in restricted-execution mode.

### **new_restrict_name_prop**
\`new_restrict_name_prop: number;\`

Type: *number*

### **old_none_name_prop**
\`old_none_name_prop: number;\`

Type: *number*

Notes:
  - This property can't be edited in restricted-execution mode.

### **old_read_only_name_prop**
\`old_read_only_name_prop: number;\`

Type: *number*

## Methods
- [both_none_name_func](#both_none_name_func)
- [both_read_only_name_func](#both_read_only_name_func)
- [new_default_name_func](#new_default_name_func)
- [new_restrict_name_func](#new_restrict_name_func)
- [old_none_name_func](#old_none_name_func)
- [old_read_only_name_func](#old_read_only_name_func)

### **both_none_name_func**
\`
both_none_name_func(): boolean
\`

**Returns** *boolean*
  
Notes:
- This function can't be called in restricted-execution mode.

### **both_read_only_name_func**
\`
both_read_only_name_func(): boolean
\`

**Returns** *boolean*

### **new_default_name_func**
\`
new_default_name_func(): boolean
\`

**Returns** *boolean*
  
Notes:
- This function can't be called in restricted-execution mode.

### **new_restrict_name_func**
\`
new_restrict_name_func(): boolean
\`

**Returns** *boolean*

### **old_none_name_func**
\`
old_none_name_func(): boolean
\`

**Returns** *boolean*
  
Notes:
- This function can't be called in restricted-execution mode.

### **old_read_only_name_func**
\`
old_read_only_name_func(): boolean
\`

**Returns** *boolean*
"
`;

exports[`Property and Function Privilege > Generates correct output for read-only to restricted-execution privilege name change > msdocs/scriptapi/example_module/example_module.md 1`] = `
"---
# DO NOT TOUCH — This file was automatically generated by @minecraft/api-docs-generator, to report problems file an issue at https://github.com/Mojang/minecraft-scripting-libraries
author: jakeshirley
ms.author: jashir
ms.service: minecraft-bedrock-edition
ms.date: 02/10/2025
title: example_module Module
description: Contents of the example_module module
---
# \`example_module\` Module

## Manifest Details
\`\`\`json
{
    "module_name": "example_module",
    "version": "1.0.0"
}
\`\`\`
This is version 1.x.x of this module, which is the latest as of version 1.0.0 of Minecraft.

## Available Versions
- \`1.0.0\`

## Classes
- [ExampleClass](ExampleClass.md)

## Functions

### **both_none_name_func**
\`
both_none_name_func(): boolean
\`

**Returns** *boolean*
  
Notes:
- This function can't be called in restricted-execution mode.

### **both_read_only_name_func**
\`
both_read_only_name_func(): boolean
\`

**Returns** *boolean*

### **new_default_name_func**
\`
new_default_name_func(): boolean
\`

**Returns** *boolean*
  
Notes:
- This function can't be called in restricted-execution mode.

### **new_restrict_name_func**
\`
new_restrict_name_func(): boolean
\`

**Returns** *boolean*

### **old_none_name_func**
\`
old_none_name_func(): boolean
\`

**Returns** *boolean*
  
Notes:
- This function can't be called in restricted-execution mode.

### **old_read_only_name_func**
\`
old_read_only_name_func(): boolean
\`

**Returns** *boolean*
"
`;

exports[`Property and Function Privilege > Generates correct output for read-only to restricted-execution privilege name change > typescript/example_module@1.0.0.d.ts 1`] = `
"// Type definitions for Minecraft Bedrock Edition script APIs
// Project: https://docs.microsoft.com/minecraft/creator/
// Definitions by: Jake Shirley <https://github.com/JakeShirley>
//                 Mike Ammerlaan <https://github.com/mammerla>

/* *****************************************************************************
   Copyright (c) Microsoft Corporation.
   ***************************************************************************** */
/**
 * @packageDocumentation
 *
 * Manifest Details
 * \`\`\`json
 * {
 *   "module_name": "example_module",
 *   "version": "1.0.0"
 * }
 * \`\`\`
 *
 */
export class ExampleClass {
    private constructor();
    /**
     * @remarks
     * This property can't be edited in restricted-execution mode.
     *
     */
    both_none_name_prop: number;
    both_read_only_name_prop: number;
    /**
     * @remarks
     * This property can't be edited in restricted-execution mode.
     *
     */
    new_default_name_prop: number;
    new_restrict_name_prop: number;
    /**
     * @remarks
     * This property can't be edited in restricted-execution mode.
     *
     */
    old_none_name_prop: number;
    old_read_only_name_prop: number;
    /**
     * @remarks
     * This function can't be called in restricted-execution mode.
     *
     */
    both_none_name_func(): boolean;
    both_read_only_name_func(): boolean;
    /**
     * @remarks
     * This function can't be called in restricted-execution mode.
     *
     */
    new_default_name_func(): boolean;
    new_restrict_name_func(): boolean;
    /**
     * @remarks
     * This function can't be called in restricted-execution mode.
     *
     */
    old_none_name_func(): boolean;
    old_read_only_name_func(): boolean;
}

/**
 * @remarks
 * This function can't be called in restricted-execution mode.
 *
 */
export function both_none_name_func(): boolean;
export function both_read_only_name_func(): boolean;
/**
 * @remarks
 * This function can't be called in restricted-execution mode.
 *
 */
export function new_default_name_func(): boolean;
export function new_restrict_name_func(): boolean;
/**
 * @remarks
 * This function can't be called in restricted-execution mode.
 *
 */
export function old_none_name_func(): boolean;
export function old_read_only_name_func(): boolean;
"
`;
